Fixed header sizing on mobile + justified about

--- a/src/components/page/page.style.module.scss
+++ b/src/components/page/page.style.module.scss
@@ -3,14 +3,14 @@
 .page {
 	flex-grow: 1;
 	display: flex;
-	padding: 30px 100px 30px 100px;
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
+	padding: 30px 100px 30px 100px;
 }
 
 @media only screen and (max-width: 625px) {
 	.page {
-		padding: 100px 30px 30px 30px;
+		padding: 30px;
 	}
 }
