--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -23,6 +23,7 @@
 
 .description {
 	line-height: 22px;
+	text-align: justify;
 }
 
 .portrait {
@@ -33,4 +34,28 @@
 	background-position: center center;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 	background-image: url("/static/assets/portrait-min.jpg");
+}
+
+@media only screen and (max-width: 1000px) {
+	.container {
+		flex-direction: column-reverse;
+	}
+
+	.side {
+		&:first-child {
+			margin-right: 0;
+			margin-top: 25px;
+		}
+	}
+
+	.title {
+		margin-bottom: 25px;
+	}
+}
+
+@media only screen and (max-width: 625px) {
+	.portrait {
+		width: 150px;
+		height: 150px;
+	}
 }
